--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -109,6 +109,13 @@ a:link {
     margin-left: auto;
 }
 
+.kapsayici-fw {
+    width: 100%;
+    padding: 0px 70px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 /* Telefon */
 @media (max-width: 767px) {
     .kapsayici {
@@ -376,3 +383,189 @@ figure {
     order: 1;
     margin: 30px 0px 0px 0px;
 }
+
+
+
+
+
+
+
+
+
+/* ---------- Form elemanları ---------- */
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 30px;
+}
+
+form a {
+    font-weight: 500;
+}
+
+form label {
+    width: 100%;
+}
+
+form .form-iki-sutun {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+}
+
+form input[type=text],
+form input[type=email],
+form input[type=tel],
+form input[type=number],
+form textarea {
+    width: 100%;
+    border: none;
+    background-color: transparent;
+    padding: 10px 0px;
+    border-radius: 0px;
+    font-family: inherit;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 0.2px;
+    color: #000;
+    ;
+    resize: none;
+    transition: all 0.3s;
+    border-bottom: 1px solid #E5E5E5;
+}
+
+form input::placeholder,
+form textarea::placeholder {
+    color: #999999;
+    transition: all 0.3s;
+
+}
+
+form input:focus,
+form textarea:focus {
+    border-bottom: 1px solid #000;
+}
+
+form input:focus::placeholder,
+form textarea:focus::placeholder {
+    color: #6c6c6c;
+}
+
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #ffffff;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #376AB3;
+    display: grid;
+    place-content: center;
+    border-radius: 2px;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.3s;
+    margin: 0px 0px 0px 0px;
+}
+
+input[type="checkbox"]:hover {
+    background-color: #ebf0f7 !important;
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    width: 18px;
+    height: 18px;
+    transform: scale(0);
+    background-color: #376AB3;
+    border-radius: 1px;
+    transition: all 0.3s;
+}
+
+input[type="checkbox"]:checked::before {
+    transform: scale(1);
+}
+
+input[type="checkbox"]:checked::after {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    position: absolute;
+    top: 2px;
+    left: 5px;
+}
+
+input[type="radio"] {
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #ffffff;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #376AB3;
+    display: grid;
+    place-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 0px !important;
+}
+
+input[type="radio"]::before {
+    content: "";
+    width: 18px;
+    height: 18px;
+    transform: scale(0);
+    background-color: #376AB3;
+    border-radius: 50%;
+    transition: all 0.3s;
+    border: 1px solid #376AB3;
+}
+
+input[type="radio"]:checked::before {
+    transform: scale(0.5);
+}
+
+.form button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 15px 30px;
+    gap: 10px;
+    background: #DC143C;
+    border-radius: 50px;
+    font-size: 14px;
+    line-height: 14px;
+    letter-spacing: 0.2px;
+    color: #ffffff;
+    width: fit-content;
+    transition: all 0.3s;
+    border: 0px;
+    cursor: pointer;
+    font-weight: 500;
+    -webkit-appearance: none;
+
+}
+
+.form button:hover {
+    background: #b01030;
+    gap: 20px;
+}
+
+.form button:disabled {
+    opacity: 0.5;
+}
+
+
+/* Telefon */
+@media (max-width: 767px) {}
+
+/* Tablet */
+@media (min-width: 767px) and (max-width: 991.98px) {}
+
+/* ipad Pro Portrait */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {}
